--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Julie Nishimura, Collaborative Pianist'
 theme = "personal-web"
-copyright="© Edna West"
+copyright="© "
 enableEmoji=true
 enableRobotsTXT=true
 pygmentsUseClasses=true
