--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://julienishimura.com/'
 languageCode = 'en-us'
 title = 'Julie Nishimura, Collaborative Pianist'
 theme = "personal-web"
