--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ pygmentsCodeFences=true
 
 [params.intro]
   main = "Julie Nishimura"
-  sub = "Bi-Coastal Whacky Musician"
+  sub = "Collaborative Pianist"
 
 [params.main]
   latestPublishHeader = "My Latest Project"
